# SeismicAdjointImaging

./: CMakeLists.txt  README.md  make.inc.gnu  make.inc.intel  makefile
demos/Acoustic/afwi_mar/: inivp.su  pro.sh  survey.su  vp.su
demos/Acoustic/depression/: pro.sh
demos/Acoustic/flat/: pro.sh
demos/Acoustic/marmousi/: marvel.su  pro.sh
demos/Acoustic/scatter/: pro.sh
demos/Acoustic/sigbee2a/: pro.sh  sb2as0.rsf@  sb2as7r10.rsf@
demos/Acoustic/test/: model.sh  pro.sh
demos/Elastic/depression/: pro.sh
docs/: Full Waveform Inversion in Madagascar.tex  Least square migration in Madagascar.tex  assignment.tex
lib/: makefile  sjabc.c  sjabc.h  sjfile.c  sjfile.h  sjinc.h  sjmalloc.c  sjmalloc.h  sjmath.c  sjmath.h  sjwave.c  sjwave.h
mpisrc/: makefile  sjimage.h  sjmpiafwi2d.c  sjmpialsrtm2d.c  sjmpiarti2d.c  sjmpiartm2d.c  sjmpiawfd2d.c  sjmpiawti2d.c  sjmpiewfd2d.c  sjmpiewsgfd2d.c  sjmpiewvssgfd2d.c
src/: sjbin2su.c  sjdisplaysurvey2d.c  sjsurvey2d.c
test/: makefile  testsj.c
